cmake_minimum_required(VERSION 3.17)
project(ColdSteel)

set(CMAKE_CXX_STANDARD 17)

FILE(GLOB_RECURSE MAIN_SOURCE CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/ColdSteel/*.cpp)
FILE(GLOB_RECURSE MAIN_HEADER CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/ColdSteel/*.h)

add_library(${PROJECT_NAME} SHARED ${MAIN_SOURCE} ${MAIN_HEADER})